[gd_scene load_steps=15 format=3 uid="uid://d3y2s8jgc67qw"]

[ext_resource type="Script" uid="uid://dnwbjthdxt23h" path="res://core/main_game.gd" id="1_is2i4"]
[ext_resource type="PackedScene" uid="uid://c5np808a7uc7b" path="res://desk_itens/morse_antenna.tscn" id="2_6620d"]
[ext_resource type="PackedScene" uid="uid://cwliuq1qo2mpa" path="res://desk_itens/morse_input.tscn" id="3_2epw8"]
[ext_resource type="PackedScene" uid="uid://csnoj5c65lrkj" path="res://desk_itens/info_screen.tscn" id="4_vlmcc"]
[ext_resource type="PackedScene" uid="uid://dlfykwmnwo7rg" path="res://desk_itens/gps.tscn" id="5_0d78q"]
[ext_resource type="ArrayMesh" uid="uid://dgg1ogf01rjjh" path="res://assets/models/desk.res" id="5_3k31u"]
[ext_resource type="Texture2D" uid="uid://blppcsi8cia2f" path="res://assets/posters/postit.png" id="6_0d78q"]
[ext_resource type="Texture2D" uid="uid://bge5jgqf7hm4w" path="res://assets/posters/postit2.png" id="7_uo27g"]
[ext_resource type="Theme" uid="uid://dfgj2usx5hjn6" path="res://themes/ui.tres" id="8_2epw8"]
[ext_resource type="PackedScene" uid="uid://cua3g4kgtq2ns" path="res://UI/options_menu.tscn" id="9_vlmcc"]
[ext_resource type="PackedScene" uid="uid://b8moix3bv57uf" path="res://desk_itens/book.tscn" id="10_vlmcc"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_g8hlx"]
sky_top_color = Color(0.655843, 0.740153, 0.826877, 1)
sky_horizon_color = Color(0.6563, 0.752982, 0.862107, 1)
ground_bottom_color = Color(0.144006, 0.180839, 0.203205, 1)
ground_horizon_color = Color(0.12434, 0.245666, 0.184371, 1)

[sub_resource type="Sky" id="Sky_is2i4"]
sky_material = SubResource("ProceduralSkyMaterial_g8hlx")

[sub_resource type="Environment" id="Environment_8gcvo"]
background_mode = 2
sky = SubResource("Sky_is2i4")
tonemap_mode = 2

[node name="MainGame" type="Node3D"]
script = ExtResource("1_is2i4")

[node name="MorseAntenna" parent="." instance=ExtResource("2_6620d")]
transform = Transform3D(1.3, 0, 0, 0, 1.3, 0, 0, 0, 1.3, -25.1711, 23.8015, -10.9032)

[node name="MorseInput" parent="." instance=ExtResource("3_2epw8")]
transform = Transform3D(0.997726, 0, -0.0674058, 0, 1, 0, 0.0674058, 0, 0.997726, 7.23415, 23.969, -5.03513)

[node name="InfoScreen" parent="." instance=ExtResource("4_vlmcc")]
transform = Transform3D(0.997214, 0, 0.0745954, 0, 1, 0, -0.0745954, 0, 0.997214, -9.55178, 23.969, -5.02075)

[node name="GPS" parent="." instance=ExtResource("5_0d78q")]
transform = Transform3D(0.892373, 0, -0.451298, 0, 1, 0, 0.451298, 0, 0.892373, 16.3239, 23.6736, 7.03388)

[node name="Desk" type="MeshInstance3D" parent="."]
transform = Transform3D(5000, 0, 0, 0, 5000, 0, 0, 0, 5000, 0, 0, 0)
mesh = ExtResource("5_3k31u")

[node name="Postits" type="Node3D" parent="."]
transform = Transform3D(1.79742, -0.0963066, 0, 0.0963066, 1.79742, 0, 0, 0, 1.8, -10.1835, 42.9108, -21.7958)

[node name="Compass" type="Sprite3D" parent="Postits"]
transform = Transform3D(1.10537, 0.112825, 0, -0.112825, 1.10537, 0, 0, 0, 1.11111, -2.31904, -0.36274, 0)
texture = ExtResource("6_0d78q")

[node name="Pirates" type="Sprite3D" parent="Postits"]
transform = Transform3D(1, 1.49012e-08, 0, -1.49012e-08, 1, 0, 0, 0, 1, 2.56381, -2.01727, 0)
visible = false
texture = ExtResource("7_uo27g")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.975684, 0.219182, 0, -0.219182, 0.975684, 0, 55.6799, 93.5103)
fov = 21.2

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_8gcvo")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866024, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.75, -0.43301, 0, 0, 0)

[node name="Book" parent="." instance=ExtResource("10_vlmcc")]
transform = Transform3D(0.606086, 0, 0.795399, 0, 1, 0, -0.795399, 0, 0.606086, -18.1339, 25.0951, 8.84194)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_physics_priority = -1
layer = 2

[node name="MainUI" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainUI"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Topbar" type="HBoxContainer" parent="CanvasLayer/MainUI/VBoxContainer"]
layout_mode = 2

[node name="Pause" type="Button" parent="CanvasLayer/MainUI/VBoxContainer/Topbar"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme = ExtResource("8_2epw8")
text = "PAUSE"

[node name="Spacer" type="Control" parent="CanvasLayer/MainUI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="Bottombar" type="HBoxContainer" parent="CanvasLayer/MainUI/VBoxContainer"]
layout_mode = 2

[node name="Spacer2" type="Control" parent="CanvasLayer/MainUI/VBoxContainer/Bottombar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SPACE" type="Label" parent="CanvasLayer/MainUI/VBoxContainer/Bottombar"]
layout_mode = 2
theme = ExtResource("8_2epw8")
text = "[SPACE] - Morse input"
horizontal_alignment = 1

[node name="Spacer3" type="Control" parent="CanvasLayer/MainUI/VBoxContainer/Bottombar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BACKSPACE" type="Label" parent="CanvasLayer/MainUI/VBoxContainer/Bottombar"]
layout_mode = 2
theme = ExtResource("8_2epw8")
text = "[BACKSPACE] - Delete"
horizontal_alignment = 1

[node name="Spacer4" type="Control" parent="CanvasLayer/MainUI/VBoxContainer/Bottombar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ENTER" type="Label" parent="CanvasLayer/MainUI/VBoxContainer/Bottombar"]
layout_mode = 2
theme = ExtResource("8_2epw8")
text = "[SPACE] - Confirm"
horizontal_alignment = 1

[node name="Spacer5" type="Control" parent="CanvasLayer/MainUI/VBoxContainer/Bottombar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ESC" type="Label" parent="CanvasLayer/MainUI/VBoxContainer/Bottombar"]
layout_mode = 2
theme = ExtResource("8_2epw8")
text = "[ESC] - Cancel"
horizontal_alignment = 1

[node name="Spacer6" type="Control" parent="CanvasLayer/MainUI/VBoxContainer/Bottombar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="OptionsMenu" parent="CanvasLayer" instance=ExtResource("9_vlmcc")]
process_mode = 3
visible = false

[connection signal="confirm_pressed" from="MorseInput" to="." method="_confirm_input_message"]
[connection signal="gps_selected" from="GPS" to="." method="_on_gps_selected"]
[connection signal="pressed" from="CanvasLayer/MainUI/VBoxContainer/Topbar/Pause" to="." method="_on_pause_pressed"]
[connection signal="close_options" from="CanvasLayer/OptionsMenu" to="." method="_on_options_menu_close_options"]
